--- a/style.css
+++ b/style.css
@@ -10,6 +10,33 @@
   box-sizing: inherit;
 }
 
+/*
+popup styles
+*/
+
+:root {
+  --primary: #0676ed;
+  --background: #222b45;
+  --warning: #f2a600;
+  --success: #12c99b;
+  --error: #e41749;
+  --dark: #151a30;
+}
+
+.alert .open {
+  margin-left: auto;
+  margin-right: 5px;
+}
+.alert .close, .alert .open {
+  color: #fff;
+  transition: transform 0.5s;
+  font-size: 18px;
+  cursor: pointer;
+}
+.alert .close:hover, .alert .open:hover {
+  transform: scale(1.3);
+}
+
 html {
   font-size: 62.5%;
   box-sizing: border-box;
